Design AddFragment Layout

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ android {
         }
     }
 
-    viewBinding {
-        true
+    buildFeatures {
+        viewBinding = true
     }
 
     compileOptions {
